objects/Group_Award__c.object
<CustomObject>
    <fields>
        <fullName>Award_Justification__c</fullName>
        <description>Justification for giving the group award.</description>
        <label>Award Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Award_Name__c</fullName>
        <description>Name of the group award given by the user.</description>
        <label>Group Award Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Group_Awardees__c</fullName>
        <label>Number of Group Awardees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Links together individual award records into a group award. A group award is a justification of an award to multiple individual recipients.</description>
    <label>Group Award</label>
    <nameField>
        <displayFormat>GRP-{0000000}</displayFormat>
        <label>Group Award Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Standard_Group_Award</fullName>
        <active>true</active>
        <description>Standard Group Award record type for a generic group award record.</description>
        <label>Standard Group Award</label>
    </recordTypes>
</CustomObject>